--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
+  },
+  "dependencies": {
+    "vite": "^5.4.8"
   }
 }
